setting up for batch3

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
     <td>
       <h2>Train the Docent</h2>
       <a href="/docent-learner/images.py">Answer questions about images</a><br>
+      <a href="/docent-learner/textselect.py">Identify sections of text</a><br>
       <br>
       <br>
       <br>
