rearranged directories to make proxying easier

--- a/html/index.html
+++ b/html/index.html
@@ -8,18 +8,18 @@
     </td>
     <td>
       <h2>Train the Docent</h2>
-      <a href="/docent-learner/images.py">Answer questions about images</a><br>
-      <a href="/docent-learner/textselect.py">Identify sections of text</a><br>
+      <a href="/docent-learner/dl/images.py">Answer questions about images</a><br>
+      <a href="/docent-learner/dl/textselect.py">Identify sections of text</a><br>
       <br>
       <br>
       <br>
       <h3>Administration</h3>
-      <a href="/docent-learner/admin.py">Docent behavior administration</a><br>
-      <a href="/docent-learner/contentadmin.py">Content administration</a><br>
-      <a href="/docent-learner/stats.py">Statistics and charts</a><br>
+      <a href="/docent-learner/dl/admin.py">Docent behavior administration</a><br>
+      <a href="/docent-learner/dl/contentadmin.py">Content administration</a><br>
+      <a href="/docent-learner/dl/stats.py">Statistics and charts</a><br>
     </td>
     <td width=351>
-      <img src="/static/AdriaenVanOstade-TheSchoolMaster.png" width=350>
+      <img src="/docent-learner/static/AdriaenVanOstade-TheSchoolMaster.png" width=350>
     </td>
   </tr>
 </table>
