added menu item

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
       <h2>Train the Docent</h2>
       <a href="/docent-learner/dl/images.py">Answer questions about images</a><br>
       <a href="/docent-learner/dl/textselect.py">Identify sections of text</a><br>
+      <a href="/docent-learner/dl/tweets.py">Tag Tweets</a><br>
       <br>
       <br>
       <br>
